Convert core module controllers/services/config to JAX-RS/CDI via workflow (WIP)